﻿﻿# FuriganaCtl の開発履歴

- 2025-10-21 Ver.1.0
    - 初公開。
- 2025-10-21 Ver.1.1
    - フォントのクオリティを向上。
- 2026-10-22 Ver.1.2
    - 禁則処理の無限ループなど修正。