@@ -57,13 +57,14 @@
 
 ## 対応スタイル一覧
 
-| 定数              |     値 | 説明              |
-| ----------------- | ------ | ----------------- |
-| `ES_LEFT`         |    `0` | 左そろえ          |
-| `ES_CENTER`       |  `0x1` | 水平中央そろえ    |
-| `ES_RIGHT`        |  `0x2` | 右そろえ          |
-| `ES_MULTILINE`    |  `0x4` | 複数行対応        |
-| `ES_AUTOHSCROLL`  | `0x80` | 横スクロール対応  |
+| 定数              |     値 | 説明               |
+| ----------------- | ------ | ------------------ |
+| `ES_LEFT`         |      0 | 左そろえ           |
+| `ES_CENTER`       |    0x1 | 水平中央そろえ     |
+| `ES_RIGHT`        |    0x2 | 右そろえ           |
+| `ES_MULTILINE`    |    0x4 | 複数行対応         |
+| `ES_AUTOHSCROLL`  |   0x80 | 横スクロール対応   |
+| `FCS_NOSCROLL`    | 0x4000 | スクロールバーなし |
 
 ## カスタムメッセージ一覧
 
