@@ -5,4 +5,6 @@
 - 2025-10-21 Ver.1.1
     - フォントのクオリティを向上。
 - 2026-10-22 Ver.1.2
+    - FC_SETSELメッセージを導入。
     - 禁則処理の無限ループなど修正。
+    - FCS_NOSCROLLスタイルを導入。
